# Rusty-Analyser

./: Cargo.toml  LICENSE  readme.md
.github/workflows/: release.yml
src/: main.rs
src/analyser/: constants.rs  mod.rs  ntfs_explorer.rs  storage.rs  types.rs  utils.rs
src/analyzer/: storage.rs  utils.rs
src/shell/: commands.rs  help_cmd.rs  mod.rs  ntfs_commands.rs  ntfscommands.rs  types.rs
src/utility/: constants.rs  funzy.rs  mod.rs  utils.rs
