[package]
name = "Rusty-Analyser"
version = "0.3.1-beta"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
winapi = { version = "0.3.9", features = ["winbase", "fileapi", "ntdef", "winnt"] }
walkdir = "2.3"
chrono = "0.4"
rayon = "1.5"
lazy_static = "1.5.0"
colored = "3.0.0"
whoami = "1.5.2"
indexmap = "2.7.1"
rand = "0.9.0"
windows = { version = "0.61.1", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
]}
ntfs-reader = "0.4.2"
time = "0.3.41"

[profile.dev]
opt-level = 0
overflow-checks = true
debug = "full"
lto = "off"
panic = "abort"

[profile.release]
opt-level = 3
debug = false
overflow-checks = true
panic = "abort"
lto = "thin"
